--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -26,11 +26,16 @@
             70%  {opacity: 1}
             to   {opacity: 0}
         }
+
+
+        .body {
+            max-width: 100vw;
+        }
         
 
         .flash {
             position: fixed;
-            top: calc(65px + 1.5rem);
+            top: calc(65px + 2vw);
             width: 100%;
             line-height: 1rem;
             opacity: 1;
