--- a/comunidadeimpressionadora/templates/usuarios.html
+++ b/comunidadeimpressionadora/templates/usuarios.html
@@ -25,7 +25,7 @@
         }
 
         .btn-posts {
-            width: 300px;
+            width: max-content;
             font-size: .8rem;
         }
 
