--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -6,46 +6,9 @@
     <title>Comunidade Impressionadora</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
-    
-
-    
-    
-    <style>
-
-        :root {
-            --cor1: rgb(25, 158, 69);
-            --cor2: rgb(12, 75, 33);
-        }
-
-        @keyframes hide {
-            0%   {opacity: 0}
-            10%  {opacity: 1}
-            70%  {opacity: 1}
-            to   {opacity: 0}
-        }
-
-
-        .body {
-            max-width: 100vw;
-        }
-        
-
-        .flash {
-            position: fixed;
-            top: calc(65px + 2vw);
-            width: 100%;
-            line-height: 1rem;
-            opacity: 1;
-            animation: hide 12s 0s forwards;
-            z-index: 9998;
-        }
-
-       
-
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/base.css') }}">
 
 
     {% block head %}
