--- a/comunidadeimpressionadora/templates/editarperfil.html
+++ b/comunidadeimpressionadora/templates/editarperfil.html
@@ -2,110 +2,97 @@
 {% extends 'perfil.html' %}
 
 
-
-
-
 {% block form_editarperfil %}
 
+    <div class="container">
 
-<style>
+        <div class="row">
+            <div class="col">
+                <form method="POST" action="" class="border p-4 mt-2" enctype="multipart/form-data">
+                    {{ form.csrf_token }}
+                    <legend>Editar Perfil</legend>
+                    <fieldset>
 
-    .check-cursos {
-        padding-left: 10px;
-    }
+                        <div class="form-group">
+                            {{ form.username.label(class="form-control-label") }}
 
-</style>
+                            {% if form.username.errors %}
+                                {{ form.username(class="form-control is-invalid") }}
+                                
+                                    <div class="invalid-feedback">
+                                        {{ form.username.errors[0] }}
+                                    </div>
+                                
+                            {% else %}
+                                {{ form.username(class="form-control") }}
+                            {% endif %}
+                        </div>
 
+                        <div class="form-group">
+                            {{ form.email.label(class="form-control-label") }}
 
-<div class="container">
+                            {% if form.email.errors %}
+                                {{ form.email(class="form-control is-invalid") }}
+                                
+                                    <div class="invalid-feedback">
+                                        {{ form.email.errors[0] }}
+                                    </div>
+                                
+                            {% else %}
+                                {{ form.email(class="form-control") }}
+                            {% endif %}
+                        </div>
+                        
+                        <div class="form-group">
+                            {{ form.foto_perfil.label(class="form-control-label mt-1") }}
+                            {{ form.foto_perfil(class="form-control-file") }}
+                            {% if form.foto_perfil.errors %}
+                                {% for erro in form.foto_perfil.errors %}
 
-    <div class="row">
-        <div class="col">
-            <form method="POST" action="" class="border p-4 mt-2" enctype="multipart/form-data">
-                {{ form.csrf_token }}
-                <legend>Editar Perfil</legend>
-                <fieldset>
+                                    <span class="text-danger">{{ erro }}</span>
 
-                    <div class="form-group">
-                        {{ form.username.label(class="form-control-label") }}
-
-                        {% if form.username.errors %}
-                            {{ form.username(class="form-control is-invalid") }}
+                                {% endfor %}
+                            {% endif %}
                             
-                                <div class="invalid-feedback">
-                                    {{ form.username.errors[0] }}
+                        
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.bg_perfil_url.label(class="form-control-label") }}
+                            {{ form.bg_perfil_url(class="form-control-file mt-2") }}
+
+                            {{ form.bg_perfil_img(class="form-control-file mt-1") }}
+                            {% if form.bg_perfil_img.errors %}
+                                {% for erro in form.bg_perfil_img.errors %}
+
+                                    <span class="text-danger">{{ erro }}</span>
+
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+
+                        <br>
+                        <h5>Cursos Inscritos</h5>
+
+                        
+
+                        {% for campo in form %}
+                            {% if "curso_" in campo.name %}
+                                <div class="form-group mb-1 check-cursos" style="padding-left: 10px;">
+                                    {{ campo(class="form-check-input", checked=True if campo.label.text in current_user.cursos else False) }}
+                                    {{ campo.label(class="form-check-label") }}
                                 </div>
-                            
-                        {% else %}
-                            {{ form.username(class="form-control") }}
-                        {% endif %}
-                    </div>
+                            {% endif %}
+                        {% endfor %}
+                        
 
-                    <div class="form-group">
-                        {{ form.email.label(class="form-control-label") }}
-
-                        {% if form.email.errors %}
-                            {{ form.email(class="form-control is-invalid") }}
-                            
-                                <div class="invalid-feedback">
-                                    {{ form.email.errors[0] }}
-                                </div>
-                            
-                        {% else %}
-                            {{ form.email(class="form-control") }}
-                        {% endif %}
-                    </div>
-                    
-                    <div class="form-group">
-                    	{{ form.foto_perfil.label(class="form-control-label mt-1") }}
-                        {{ form.foto_perfil(class="form-control-file") }}
-                        {% if form.foto_perfil.errors %}
-                            {% for erro in form.foto_perfil.errors %}
-
-                                <span class="text-danger">{{ erro }}</span>
-
-                            {% endfor %}
-                        {% endif %}
-                    	
-                    
-                    </div>
-
-                    <div class="form-group">
-                    	{{ form.bg_perfil_url.label(class="form-control-label") }}
-                        {{ form.bg_perfil_url(class="form-control-file mt-2") }}
-
-                        {{ form.bg_perfil_img(class="form-control-file mt-1") }}
-                        {% if form.bg_perfil_img.errors %}
-                            {% for erro in form.bg_perfil_img.errors %}
-
-                                <span class="text-danger">{{ erro }}</span>
-
-                            {% endfor %}
-                        {% endif %}
-                    </div>
-
-                    <br>
-                    <h5>Cursos Inscritos</h5>
-
-                    
-
-                    {% for campo in form %}
-                        {% if "curso_" in campo.name %}
-                            <div class="form-group mb-1 check-cursos">
-                                {{ campo(class="form-check-input", checked=True if campo.label.text in current_user.cursos else False) }}
-                                {{ campo.label(class="form-check-label") }}
-                            </div>
-                        {% endif %}
-                    {% endfor %}
-                    
-
-                    
-                    
-                </fieldset>
-                {{ form.botao_submit_editarperfil(class="btn btn-primary mt-2") }}
-            </form>
+                        
+                        
+                    </fieldset>
+                    {{ form.botao_submit_editarperfil(class="btn btn-primary mt-2") }}
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
