--- a/comunidadeimpressionadora/templates/home.html
+++ b/comunidadeimpressionadora/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block body %}
+{% block main %}
 
         <div class="container">
             <h1>Coe Lira, meu 1º site ta no ar!!!!! To sabendo muito</h1><p>Esse site ta ficando legal</p>
