--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/perfil.css') }}">
 {% endblock %}
 
-{% block body %}
+{% block main %}
 
 <div id="cab body">
     
