--- a/comunidadeimpressionadora/templates/contato.html
+++ b/comunidadeimpressionadora/templates/contato.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block body %}
+{% block main %}
     <div class="container">
         <h1>Qualquer dúvida mande um e-mail para</h1>
         <h3>listavip@hashtagtreinamentos.com</h3>
