--- a/comunidadeimpressionadora/templates/criarpost.html
+++ b/comunidadeimpressionadora/templates/criarpost.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block body %}
+{% block main %}
     <div class="container">
         <h1>criar post</h1>
     </div>
