--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -31,7 +31,7 @@
             {% endif %}
         {% endwith %}
     </div>
-    <main class="container body">
+    <main class="container main">
 
         {% block main %}
         {% endblock %}
@@ -39,5 +39,9 @@
     </main>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    {% block script %}
+    {% endblock %}
+    
 </body>
 </html>
