--- a/comunidadeimpressionadora/templates/navbar.html
+++ b/comunidadeimpressionadora/templates/navbar.html
@@ -37,17 +37,21 @@
 </header>
 
 
-<script>
 
-  const btn_menu = document.getElementById('btn-menu')
 
-  function abrirMenu(event) {
-    const nav = document.getElementById('nav')
+{% block script %}
+    <script>
 
-    btn_menu.classList.toggle('active')
-    nav.classList.toggle('active')
+        const btn_menu = document.getElementById('btn-menu')
 
-  }
+        function abrirMenu(event) {
+            const nav = document.getElementById('nav')
 
-  btn_menu.addEventListener('click', abrirMenu)
-</script>
+            btn_menu.classList.toggle('active')
+            nav.classList.toggle('active')
+
+        }
+
+        btn_menu.addEventListener('click', abrirMenu)
+    </script>
+{% endblock %}
