--- a/comunidadeimpressionadora/templates/criarpost.html
+++ b/comunidadeimpressionadora/templates/criarpost.html
@@ -1,11 +1,50 @@
 {% extends 'base.html' %}
 
-{% block main %}
-    <div class="container">
-        <h1>criar post</h1>
-    </div>
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/criarpost.css') }}">
 {% endblock %}
 
+{% block main %}
+
+    <form method="POST" action="" class="container">
+        {{ form.csrf_token }}
+        <legend class="tit-up">Criar Post</legend>
+        <hr>
+        <fieldset>
+
+            <div class="form-group">
+                {{ form.titulo.label(class="form-control-label") }}
+
+                {% if form.titulo.errors %}
+                    {{ form.titulo(class="form-control is-invalid") }}
+                    
+                        <div class="invalid-feedback">
+                            {{ form.titulo.errors[0] }}
+                        </div>
+                {% else %}
+                    {{ form.titulo(class="form-control") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.corpo.label(class="form-control-label") }}
+
+                {% if form.corpo.errors %}
+                    {{ form.corpo(class="form-control is-invalid") }}
+                    
+                        <div class="invalid-feedback">
+                            {{ form.corpo.errors[0] }}
+                        </div>
+                {% else %}
+                    {{ form.corpo(class="form-control") }}
+                {% endif %}
+            </div>
+        </fieldset>
+
+        {{ form.botao_submit(class="btn btn-primary mt-2") }}
+        
+    </form>
+
+{% endblock %}
 
 {% block script %}
 {% endblock %}
