removendo divs container

--- a/comunidadeimpressionadora/templates/criarpost.html
+++ b/comunidadeimpressionadora/templates/criarpost.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-    <form method="POST" action="" class="container">
+    <form method="POST" action="">
         {{ form.csrf_token }}
         <legend class="tit-up">Criar Post</legend>
         <hr>
