--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -31,7 +31,7 @@
             {% endif %}
         {% endwith %}
     </div>
-    <main class="container main">
+    <main class="container">
 
         {% block main %}
         {% endblock %}
