--- a/comunidadeimpressionadora/static/styles/perfil.css
+++ b/comunidadeimpressionadora/static/styles/perfil.css
@@ -4,20 +4,21 @@
 
 #pf {
   width: 100%;
-  height: 20vh;
+  height: 150px;
   box-shadow: 0px 1px 4px #00000085;
 }
 
 #foto-name-edit {
   display: block;
   width: 100%;
-  padding-bottom: 2vh;
+  padding-bottom: 35px;
+  background-color: white;
 }
 
-#foto-name-edit #img {
+#foto-name-edit .avatar {
   display: block;
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   transform: translate(0%, -50%);
   margin: auto;
   border: .5vh solid white;
@@ -109,26 +110,31 @@ overflow-y: auto;
 
 }
 
+.post {
+  width: 100%;
+}
+
 
 @media (min-width: 800px) {
 
 
 #foto-name-edit {
   display: block;
+  margin-bottom: 35px;
 }
 
 
-#foto-name-edit #img {
+#foto-name-edit .avatar {
   margin-left: 1vw;
-width: 100px;
-height: 100px;
-transform: translate(0%, -10%);
+  width: 100px;
+  height: 100px;
+  transform: translate(0%, -10%);
 }
 
 #nome {
   margin: -100px auto auto 140px;
-font-size: 1.5rem;
-text-align: left;
+  font-size: 1.5rem;
+  text-align: left;
 }
 
 
@@ -141,7 +147,7 @@ text-align: left;
   width: 60%;
   left: 10%;
   font-size: 1em;
-margin: -40px auto auto 40%;
+  margin: -40px auto auto 40%;
 }
 
 
