--- a/comunidadeimpressionadora/templates/editarperfil.html
+++ b/comunidadeimpressionadora/templates/editarperfil.html
@@ -4,9 +4,7 @@
 
 {% block form_editarperfil %}
 
-    
-
-    <div class="row">
+    <div class="row fomulario-editar-perfil">
         <div class="col">
             <form method="POST" action="" class="border p-4 mt-2" enctype="multipart/form-data">
                 {{ form.csrf_token }}
