--- a/comunidadeimpressionadora/templates/home.html
+++ b/comunidadeimpressionadora/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/posts.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/post.css') }}">
 {% endblock %}
 
 {% block main %}
@@ -13,33 +13,32 @@
 
     {% for post in posts %}
         <div class="row border mt-4 p-1 post">
-            <div class="col col-3">
+            <div class="row">
                 <div class="avatar" style="background-image: url('{{ avatar(post.autor.foto_perfil) }}');"></div>
-                <strong class="nome">{{ post.autor.username }}</strong>
-
-                <div style="text-align: center;">
-                    {% for curso in post.autor.cursos.split(";") %}
-					<span class="mt-1 cursos">{{ curso.split(' ')[0] }}</span>
-				    {% endfor %}
+                <div class="nome-cursos-data">
+                    <strong class="nome">{{ post.autor.username }}</strong>
+                    <div class="div-cursos">
+                        {% for curso in post.autor.cursos.split(";") %}
+                            <span class="mt-1 cursos">{{ curso }}</span>
+                        {% endfor %}
+                    </div>
+                    <small class="data-hora">{{ post.data_criacao }}</small>
                 </div>
             </div>
-
-            <div class="col ">
-                <h3 class="titulo">{{ post.titulo }}</h3>
-                <hr>
+            <hr>
+            <div class="row">
+                <a href="#" class="mb-1 titulo">{{ post.titulo }}</a>
                 <p class="corpo">{{ post.corpo }} </p>
-                <small class="data-hora">{{ post.data_criacao }}</small>
-                <hr>
-                <div class="row roda-pe">
-                    {% if current_user.id == post.autor.id %}
-                    <button class="btn btn-secondary">Comentários</button>
-                    <button class="btn btn-danger">Apagar</button>
-                    {% else %}
-                    <button class="btn btn-primary">Curtir</button>
-                    <button class="btn btn-secondary">Comentários</button>
-                    {% endif %}
-                    
-                </div>
+            </div>
+            <div class="row roda-pe">
+                {% if current_user.id == post.autor.id %}
+                <button class="btn btn-secondary">Comentários</button>
+                <button class="btn btn-danger">Apagar</button>
+                {% else %}
+                <button class="btn btn-primary">Curtir</button>
+                <button class="btn btn-secondary">Comentários</button>
+                {% endif %}
+                
             </div>
         </div>
     {% endfor %}
