--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -2,43 +2,41 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/perfil.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/posts.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/post.css') }}">
 {% endblock %}
 
 {% block main %}
 
-    <div id="pf" style="background: rgb(203, 253, 255) url('{{ bg_perfil }}') no-repeat fixed; background-size: cover;">
-      
-    </div>
+    <div id="pf" style="background: rgb(203, 253, 255) url('{{ bg_perfil }}') no-repeat fixed; background-size: cover;"></div>
     
     <div id="foto-name-edit">
-		<div id="img"  style="background: rgb(185, 243, 185) url('{{ foto_perfil }}') center center fixed; background-size: cover;"></div>
+		<div id="img" class="avatar"  style="background-image: url('{{ foto_perfil }}')"></div>
 		<span id="nome">{{ current_user.username }}</span>
 		{% if not editor %}
 			<a href="{{ url_for('editar_perfil') }}">editar perfil</a>
-
-
 			<table id="info">
+
 				<thead>
-				<th class="sep">ID</th>
-				<th class="sep">Cursos</th>
-				<th>Post</th>
+					<th class="sep">ID</th>
+					<th class="sep">Cursos</th>
+					<th>Post</th>
 				</thead>
+
 				<tbody>
-				<td class="sep">{{ current_user.id }}</td>
+					<td class="sep">{{ current_user.id }}</td>
 
-				<td class="sep">
-					{% if current_user.cursos in ("não informado", "") %}
-						0
-					{% else %}
-						<button id="btn-cursos"> 
-							{{ current_user.cursos.count(";") + 1 }}
-						</button>
-					{% endif %}
-				</td>
-
-				<td>{{ len(current_user.posts) }}</td>
+					<td class="sep">
+						{% if current_user.cursos in ("não informado", "") %}
+							0
+						{% else %}
+							<button id="btn-cursos"> 
+								{{ current_user.cursos.count(";") + 1 }}
+							</button>
+						{% endif %}
+					</td>
+					<td>{{ len(current_user.posts) }}</td>
 				</tbody>
+
 			</table>
 			<div id="list-cursos" class="row justify-content-center">
 				<div class="col" style="text-align: center;">
@@ -48,32 +46,30 @@
 					{% endfor %}
 				</div>
 			</div>
-
-			{% for post in current_user.posts %}
-				<div class="row border mt-4 p-1 post">
-					<div class="col col-3">
-						<div class="avatar" style="background-image: url('{{ foto_perfil }}');"></div>
-						<strong class="nome">{{ current_user.username }}</strong>
-					</div>
-		
-					<div class="col ">
-						<h3 class="titulo">{{ post.titulo }}</h3>
-						<hr>
-						<p class="corpo">{{ post.corpo }} </p>
-						<small class="data-hora">{{ post.data_criacao }}</small>
-						<hr>
-						<div class="row roda-pe">
-							<button class="btn btn-secondary">Comentários</button>
-							<button class="btn btn-primary">Editar</button>
-							<button class="btn btn-danger">Apagar</button>
-						</div>
-					</div>
-				</div>
-			{% endfor %}
-
-
 		{% endif %}
     </div>
+	{% if not editor %}
+		{% for post in current_user.posts %}
+			<div class="row border mt-4 p-1 post">
+				<div class="row">
+					<div class="avatar" style="background-image: url('{{ foto_perfil }}');"></div>
+					<div class="nome-cursos-data">
+						<strong class="nome">{{ post.autor.username }}</strong>
+						<small class="data-hora">{{ post.data_criacao }}</small>
+					</div>
+				</div>
+				<hr>
+				<div class="row">
+					<a href="#" class="mb-1 titulo">{{ post.titulo }}</a>
+					<p class="corpo">{{ post.corpo }} </p>
+				</div>
+				<div class="row roda-pe">
+					<button class="btn btn-secondary">Comentários</button>
+					<button class="btn btn-danger">Apagar</button>
+				</div>
+			</div>
+		{% endfor %}
+	{% endif %}
 
 	{% block form_editarperfil %}
 
