criado pagina de exibir post

--- a/comunidadeimpressionadora/templates/exibir_post.html
+++ b/comunidadeimpressionadora/templates/exibir_post.html
@@ -1,18 +1,13 @@
 {% extends 'base.html' %}
 
-{% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/post.css') }}">
-{% endblock %}
+    {% block head %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/exibir_post.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/post.css') }}">
+    {% endblock %}
 
-{% block main %}
-
-    <h1 class="titulo-page-center">Comunidade Impressionadora - hashtag treimanentos</h1>
-    <h2 class="subtitulo-page-center">Alunos, esperts e a galera da Hashtag em um só lugar</h2>
-    <hr>
-
-    {% for post in posts %}
-        <div class="row border mt-4 p-1 post">
+    {% block main %}
+        <br>
+        <div class="row border p-2 post">
             <div class="row">
                 <div class="avatar" style="background-image: url('{{ avatar(post.autor.foto_perfil) }}');"></div>
                 <div class="nome-cursos-data">
@@ -27,7 +22,7 @@
             </div>
             <hr>
             <div class="row">
-                <a href="{{ url_for('exibir_post', id_post=post.id) }}" class="mb-1 titulo">{{ post.titulo }}</a>
+                <strong class="mb-1 titulo">{{ post.titulo }}</strong>
                 <p class="corpo">{{ post.corpo }} </p>
             </div>
             <div class="row roda-pe">
@@ -41,11 +36,5 @@
                 
             </div>
         </div>
-    {% endfor %}
-    
-    
-
-{% endblock %}
-
-{% block script %}
-{% endblock %}
+        
+    {% endblock %}
