--- a/comunidadeimpressionadora/templates/exibir_post.html
+++ b/comunidadeimpressionadora/templates/exibir_post.html
@@ -7,7 +7,7 @@
 
     {% block main %}
         <br>
-        <div class="row border p-2 post">
+        <div id="post" class="row border p-2 post">
             <div class="row">
                 <div class="avatar" style="background-image: url('{{ avatar(post.autor.foto_perfil) }}');"></div>
                 <div class="nome-cursos-data">
@@ -27,14 +27,74 @@
             </div>
             <div class="row roda-pe">
                 {% if current_user.id == post.autor.id %}
-                <button class="btn btn-secondary">Comentários</button>
-                <button class="btn btn-danger">Apagar</button>
+                    <a id="btn-editar" href="#edicao" class="btn btn-primary" >Editar</a>
+                    <button class="btn btn-danger">Apagar</button>
                 {% else %}
-                <button class="btn btn-primary">Curtir</button>
-                <button class="btn btn-secondary">Comentários</button>
+                    <button class="btn btn-primary">Curtir</button>
+                    <button class="btn btn-secondary">Comentários</button>
                 {% endif %}
                 
             </div>
         </div>
+
+        {% if current_user.id == post.autor.id %}
+
+            <form id="edicao" method="POST" action="">
+                {{ form.csrf_token }}
+                <legend class="tit-up">Editar Post</legend>
+                <hr>
+                <fieldset>
         
+                    <div class="form-group">
+                        {{ form.titulo.label(class="form-control-label") }}
+        
+                        {% if form.titulo.errors %}
+                            {{ form.titulo(class="form-control is-invalid") }}
+                            
+                                <div class="invalid-feedback">
+                                    {{ form.titulo.errors[0] }}
+                                </div>
+                        {% else %}
+                            {{ form.titulo(class="form-control") }}
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.corpo.label(class="form-control-label") }}
+        
+                        {% if form.corpo.errors %}
+                            {{ form.corpo(class="form-control is-invalid") }}
+                            
+                                <div class="invalid-feedback">
+                                    {{ form.corpo.errors[0] }}
+                                </div>
+                        {% else %}
+                            {{ form.corpo(class="form-control") }}
+                        {% endif %}
+                    </div>
+                </fieldset>
+        
+                {{ form.botao_submit(class="btn btn-primary mt-2", value="Confirmar edição") }}
+                
+            </form> 
+
+        {% endif %}
+        
+    {% endblock %}
+
+    {% block script %}
+        
+    <script>
+        btn_editar = document.getElementById("btn-editar")
+
+        function abrirEdicao() {
+            const edicao = document.getElementById("edicao")
+            const corpo = document.getElementById("post")
+
+            edicao.classList.toggle("active")
+            post.classList.toggle("inactive")
+        }
+
+        btn_editar.addEventListener("click", abrirEdicao)
+    </script>
+
     {% endblock %}
