--- a/comunidadeimpressionadora/static/styles/post.css
+++ b/comunidadeimpressionadora/static/styles/post.css
@@ -85,7 +85,11 @@
 .post .roda-pe {
     display: flex;
     justify-content: right;
-    gap: 5px;
+    gap: 10px;
 
 }
 
+
+.post .roda-pe a {
+    width: auto;
+}
