--- a/comunidadeimpressionadora/templates/exibir_post.html
+++ b/comunidadeimpressionadora/templates/exibir_post.html
@@ -9,7 +9,7 @@
         <br>
         <div id="post" class="row border p-2 post">
             <div class="row">
-                <div class="avatar" style="background-image: url('{{ avatar(post.autor.foto_perfil) }}');"></div>
+                <div class="avatar" style="background-image: url('{{ post.autor.retur_foto_perfil() }}');"></div>
                 <div class="nome-cursos-data">
                     <strong class="nome">{{ post.autor.username }}</strong>
                     <small class="data-hora"> Data de Publicação: {{ post.data_criacao.strftime("%d/%m/%Y - %H:%M") }}</small>
@@ -28,10 +28,10 @@
             <div class="row roda-pe">
                 {% if current_user.id == post.autor.id %}
                     <a id="btn-editar" href="#edicao" class="btn btn-primary" >Editar</a>
-                    <button class="btn btn-danger">Apagar</button>
+                    <a href="#" class="btn btn-danger">Apagar</a>
                 {% else %}
-                    <button class="btn btn-primary">Curtir</button>
-                    <button class="btn btn-secondary">Comentários</button>
+                    <a class="btn btn-primary">Curtir</a>
+                    <a class="btn btn-secondary">Comentários</a>
                 {% endif %}
                 
             </div>
