--- a/comunidadeimpressionadora/templates/usuarios.html
+++ b/comunidadeimpressionadora/templates/usuarios.html
@@ -17,7 +17,7 @@
     {% for usuario in lista_usuarios %}
         
         <div class="user">
-            <div class="avatar" style="background-image: url('{{ retur_foto_perfil(usuario.foto_perfil) }}'); width: 80px; height: 80px; margin: 0px;"></div>
+            <div class="avatar" style="background-image: url('{{ usuario.retur_foto_perfil() }}'); width: 80px; height: 80px; margin: 0px;"></div>
             <span>
                 <strong>{{ usuario.username }}</strong>
                 <br>{{ usuario.email }}
