--- a/comunidadeimpressionadora/templates/criarpost.html
+++ b/comunidadeimpressionadora/templates/criarpost.html
@@ -22,7 +22,7 @@
                             {{ form.titulo.errors[0] }}
                         </div>
                 {% else %}
-                    {{ form.titulo(class="form-control") }}
+                    {{ form.titulo(class="form-control titulo") }}
                 {% endif %}
             </div>
             <div class="form-group">
@@ -35,7 +35,7 @@
                             {{ form.corpo.errors[0] }}
                         </div>
                 {% else %}
-                    {{ form.corpo(class="form-control") }}
+                    {{ form.corpo(class="form-control corpo") }}
                 {% endif %}
             </div>
         </fieldset>
