--- a/comunidadeimpressionadora/templates/exibir_post.html
+++ b/comunidadeimpressionadora/templates/exibir_post.html
@@ -28,7 +28,7 @@
             <div class="row roda-pe">
                 {% if current_user.id == post.autor.id %}
                     <a id="btn-editar" href="#edicao" class="btn btn-primary" >Editar</a>
-                    <a href="#" class="btn btn-danger">Apagar</a>
+                    <button type="button" class="btn text-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Excluir</button>
                 {% endif %}
                 
             </div>
@@ -53,7 +53,7 @@
                                     {{ form.titulo.errors[0] }}
                                 </div>
                         {% else %}
-                            {{ form.titulo(class="form-control") }}
+                            {{ form.titulo(class="form-control titulo") }}
                         {% endif %}
                     </div>
                     <div class="form-group">
@@ -66,7 +66,7 @@
                                     {{ form.corpo.errors[0] }}
                                 </div>
                         {% else %}
-                            {{ form.corpo(class="form-control") }}
+                            {{ form.corpo(class="form-control corpo") }}
                         {% endif %}
                     </div>
                 </fieldset>
@@ -74,6 +74,28 @@
                 {{ form.botao_submit(class="btn btn-primary mt-2", value="Confirmar edição") }}
                 
             </form> 
+
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel">Apagar Post?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Deseja realmente apagar esse Post? essa ação é inrreversível!
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+                    <form method="post" action="{{ url_for('excluir_post', id_post=post.id) }}">
+                        <button type="submit" class="btn btn-primary">Sim</button>
+                    </form>
+                    
+                    </div>
+                </div>
+                </div>
+            </div>
 
         {% endif %}
         
