--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -60,12 +60,11 @@
 				</div>
 				<hr>
 				<div class="row">
-					<a href="{{ url_for('exibir_post', id_post=post.id) }}" class="mb-1 titulo">{{ post.titulo }}</a>
+					<a href="{{ url_for('exibir_post', id_post=post.id, pg='perfil') }}" class="mb-1 titulo">{{ post.titulo }}</a>
 					<p class="corpo">{{ post.corpo }} </p>
 				</div>
 				<div class="row roda-pe">
-					<a class="btn btn-secondary">Comentários</a>
-					<a class="btn btn-danger">Apagar</a>
+					
 				</div>
 			</div>
 		{% endfor %}
