--- a/comunidadeimpressionadora/templates/usuarios.html
+++ b/comunidadeimpressionadora/templates/usuarios.html
@@ -21,7 +21,7 @@
             <span>
                 <strong>{{ usuario.username }}</strong>
                 <br>{{ usuario.email }}
-                <br><a class="btn btn-success btn-posts" href="">Posts: 55</a>
+                <br><a class="btn btn-success btn-posts" href="">Posts: {{ usuario.quant_posts() }}</a>
 
             </span>
             
